[tool.poetry]
name = "deathstar-empire"
version = "0.2.0"
description = "Uses Empire's RESTful API to automate gaining Domain and/or Enterprise Admin rights in Active Directory environments using some of the most common offensive TTPs"
readme = "README.md"
homepage = "https://github.com/byt3bl33d3r/DeathStar"
repository = "https://github.com/byt3bl33d3r/DeathStar"
authors = ["Marcello Salvati <byt3bl33d3r@pm.com>"]
license = "GPL-3.0-only"
exclude = ["tests/*"]
include = ["LICENSE", "deathstar/crystals/*"]
classifiers = [
    "Topic :: Security",
]
packages = [
    { include = "deathstar"}
]

[tool.poetry.scripts]
deathstar = 'deathstar.deathstar:run'

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.16.0"
rich = "^9.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
pytest = "*"
pytest-asyncio = "*"
flake8 = "*"
pylint = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
